Fix for the bug #1885: mysqldump does not dumps timestamp default.